# RepoLookupTool

./: LICENSE  README.md  pyproject.toml
RepoLookupTool/: LICENSE  README.md
RepoLookupTool/src/RepoLookupTool/: RepoLookupTool.py  azure repo lookup1.py
src/: RepoLookupTool
