[tool.poetry]
name = "RepoLookupTool"
version = "0.1.0"
description = "Tool that can look through a repository and query details of a specific repository by name, putting the information in a json file"
authors = ["Kannan Venkateswaran <kannanvaran7@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/artoby/RepoLookupTool"
keywords = ["Repository", "Azure Repo", "Catalog"]
classifiers = [
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "~3.10"
Azure DevOps = "*"


pytest = ">= 7.4.0"

[build-system]
requires = [
    "poetry-core"
]
build-backend = "poetry.core.masonry.api"